--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
+
+    <script type="importmap">
+      {
+        "imports": {
+          "vue": "https://play.vuejs.org/vue.runtime.esm-browser.js"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
