--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       }
     </style>
 
-    <script type="importmap">
+    <!-- <script type="importmap">
       {
         "imports": {
           "vue": "https://play.vuejs.org/vue.runtime.esm-browser.js"
         }
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="app"></div>
