--- a/index.html
+++ b/index.html
@@ -12,13 +12,26 @@
       }
     </style>
 
-    <!-- <script type="importmap">
+    <script type="importmap">
       {
         "imports": {
-          "vue": "https://play.vuejs.org/vue.runtime.esm-browser.js"
+          "vue": "/el-lowcode/designer/node_modules/vue/dist/vue.runtime.esm-bundler.js",
+          "vue-echarts": "/el-lowcode/designer/node_modules/vue-echarts",
+          "echarts": "/el-lowcode/designer/node_modules/echarts",
+          "echarts/": "/el-lowcode/designer/node_modules/echarts/"
         }
       }
-    </script> -->
+    </script>
+    <!-- "vue-echarts": "https://unpkg.com/vue-echarts@latest/dist/index.esm.js"
+    "vue-demi": "https://unpkg.com/vue-demi@latest",
+    "echarts": "https://unpkg.com/echarts@latest",
+    "echarts/core": "https://unpkg.com/echarts@latest/core.js",
+    "resize-detector": "https://unpkg.com/resize-detector@latest/esm/index.js",
+    "tslib": "https://unpkg.com/tslib@latest/tslib.es6.js" -->
+
+
+    <!-- <script src="https://unpkg.com/vue@latest"></script>
+    <script src="https://unpkg.com/vue-echarts@latest"></script> -->
   </head>
   <body>
     <div id="app"></div>
