--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     "resize-detector": "https://unpkg.com/resize-detector@latest/esm/index.js",
     "tslib": "https://unpkg.com/tslib@latest/tslib.es6.js" -->
 
-
-    <!-- <script src="https://unpkg.com/vue@latest"></script>
-    <script src="https://unpkg.com/vue-echarts@latest"></script> -->
+    <script src="//daybrush.com/infinite-viewer/release/latest/dist/infinite-viewer.min.js"></script>
+    <script src="//daybrush.com/guides/release/latest/dist/guides.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
