--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           "vue": "/el-lowcode/designer/node_modules/vue/dist/vue.runtime.esm-bundler.js",
           "vue-echarts": "/el-lowcode/designer/node_modules/vue-echarts",
           "echarts": "/el-lowcode/designer/node_modules/echarts",
-          "echarts/": "/el-lowcode/designer/node_modules/echarts/"
+          "echarts/": "/el-lowcode/designer/node_modules/echarts/",
+          "lodash-es": "/el-lowcode/designer/node_modules/lodash-es",
+          "lodash-es/": "/el-lowcode/designer/node_modules/lodash-es/"
         }
       }
     </script>
