--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script type="importmap">
       {
         "imports": {
-          "vue": "/el-lowcode/designer/node_modules/vue/dist/vue.runtime.esm-bundler.js",
           "vue-echarts": "/el-lowcode/designer/node_modules/vue-echarts",
           "echarts": "/el-lowcode/designer/node_modules/echarts",
           "echarts/": "/el-lowcode/designer/node_modules/echarts/",
@@ -30,6 +29,8 @@
     "echarts/core": "https://unpkg.com/echarts@latest/core.js",
     "resize-detector": "https://unpkg.com/resize-detector@latest/esm/index.js",
     "tslib": "https://unpkg.com/tslib@latest/tslib.es6.js" -->
+
+    <script src="/node_modules/vue/dist/vue.runtime.global.js"></script>
   </head>
   <body>
     <div id="app"></div>
