--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         // e.preventDefault()
       }, { passive: false })
     </script>
+
+    <!-- <script>
+      if (navigator.serviceWorker) {
+        navigator.serviceWorker.register('/sw.js')
+          .then(() => console.log('service worker 注册成功'))
+          .catch(e => console.log('servcie worker 注册失败', e))
+      }
+    </script> -->
   </head>
   <body>
     <div id="app"></div>
