--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       }
     </style>
 
-    <script src="/vue.runtime.global.prod.js"></script>
+    <script src="/lib/vue.runtime.global.prod.js"></script>
+    <script src="/lib/moveable.min.js"></script>
 
     <script>
       document.addEventListener('dragstart', e => {
