--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
     html, body { margin: 0; padding: 0; }
   </style>
 
-  <script src="/vue.runtime.global.prod.js"></script>
+  <script src="/lib/vue.runtime.global.prod.js"></script>
 
   <script type="module">
     import { createApp, reactive, h, computed, watchEffect } from 'vue'
