--- a/demo.html
+++ b/demo.html
@@ -13,32 +13,34 @@
 
   <script type="module">
     import { createApp, reactive, h, computed, watchEffect } from 'vue'
+    import { computedAsync } from '@vueuse/core'
     import { ConfigProvider, Render } from 'el-lowcode'
-    import { createClient } from 'https://esm.sh/@supabase/supabase-js'
 
-    const supabase = createClient(
-      'https://oxbkrsyagojtbckytbjx.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im94Ymtyc3lhZ29qdGJja3l0Ymp4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjcyNzQzNTAsImV4cCI6MjA0Mjg1MDM1MH0.M3O3VPvgfaxtMaasBIM-rgPw90l1GAG_m-_RQqMbNMc'
-    )
-
-    supabase.storage.from('lcd').download('/echarts-demo.js').then(async ({ data }) => {
-      console.log(data);
-      const { default: json } = (await import(/* @vite-ignore */ URL.createObjectURL(data)))
-      console.log(json);
-    })
-
-    const schema = computed(() => {
-      // const undecode = route.query.schema 
-      // return undecode ? JSON.parse(decodeURIComponent(undecode)) : { is: 'h1', children: 'no more' }
+    const schema = computedAsync(() => {
       const str = new URLSearchParams(location.href.split('?')[1]).get('schema')
-      return reactive(str ? JSON.parse(str) : { is: 'h1', children: 'no more' })
+
+      try {
+        const qs = new URLSearchParams(location.href.split('?')[1])
+        const schema = qs.get('schema'), file = qs.get('file')
+
+        if (schema) {
+          return JSON.parse(schema)
+        }
+        else if (file) {
+          return file.endsWith('.js') ? import(file).then(e => e.default) : fetch(file).then(e => e.json())
+        }
+      }
+      catch (e) {
+        console.error(e)
+        return { is: 'h1', children: '404' }
+      }
     })
 
     watchEffect(() => {
       console.log(schema.value)
     })
 
-    createApp(() => h(ConfigProvider, schema.value, h(Render, schema.value)))
+    createApp(() => schema.value && h(ConfigProvider, schema.value, h(Render, schema.value)))
       .mount(document.body)
   </script>
 </head>
