--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,7 @@
   </style>
 
   <script src="/lib/vue.runtime.global.prod.js"></script>
+  <script src="/lib/vue-demi.iife.js"></script>
 
   <script type="module">
     import { createApp, reactive, h, computed, watchEffect } from 'vue'
