--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- <script src="/lib/vue.runtime.global.prod.js"></script> -->
     <script src="/lib/vue.runtime.global.js"></script>
+    <script src="/lib/vue-demi.iife.js"></script>
     <script src="/lib/moveable.min.js"></script>
   </head>
   <body>
