--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       }
     </style>
 
-    <!-- <script src="/lib/vue.runtime.global.prod.js"></script> -->
-    <script src="/lib/vue.runtime.global.js"></script>
+    <script src="/lib/vue.runtime.global.prod.js"></script>
+    <!-- <script src="/lib/vue.runtime.global.js"></script> -->
     <script src="/lib/vue-demi.iife.js"></script>
     <script src="/lib/moveable.min.js"></script>
   </head>
