--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       * {
         box-sizing: border-box;
       }
+      :root {
+        font-family: Segoe WPC, Segoe UI, sans-serif;
+      }
     </style>
 
     <!-- <script src="/lib/vue.runtime.global.prod.js"></script> -->
