--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       }
     </style>
 
+    <script type="importmap">
+      {
+        "imports": {
+          "openai": "https://unpkg.com/openai@4.82.0/index.mjs",
+          "openai/_shims/auto/runtime": "https://unpkg.com/openai@4.82.0/_shims/auto/runtime.mjs"
+        }
+      }
+    </script>
+
     <!-- <script src="/lib/vue.runtime.global.prod.js"></script> -->
     <script src="/lib/vue.runtime.global.js"></script>
     <script src="/lib/vue-demi.iife.js"></script>
