--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script type="importmap">
       {
         "imports": {
-          "vue": "/lib/vue.runtime.global.prod.js",
+          "vue": "/lib/vue.runtime.esm-browser.js",
+          "vue-demi": "/lib/vue-demi.mjs",
           
           "openai": "https://unpkg.com/openai@4.82.0/index.mjs",
           "openai/_shims/auto/runtime": "https://unpkg.com/openai@4.82.0/_shims/auto/runtime.mjs"
@@ -27,9 +28,9 @@
     </script>
 
     <!-- <script src="/lib/vue.runtime.global.prod.js"></script> -->
-    <script src="/lib/vue.runtime.global.js"></script>
+    <!-- <script src="/lib/vue.runtime.global.js"></script>
     <script src="/lib/vue-demi.iife.js"></script>
-    <script src="/lib/moveable.min.js"></script>
+    <script src="/lib/moveable.min.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
