--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script type="importmap">
       {
         "imports": {
-          "vue": "/lib/vue.runtime.esm-browser.js",
-          "vue-demi": "/lib/vue-demi.mjs",
+          "vue": "./lib/vue.runtime.esm-browser.js",
+          "vue-demi": "./lib/vue-demi.mjs",
           
           "openai": "https://unpkg.com/openai@4.82.0/index.mjs",
           "openai/_shims/auto/runtime": "https://unpkg.com/openai@4.82.0/_shims/auto/runtime.mjs"
